--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -19,8 +19,13 @@
   <body>
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
-      <div class="Container" style="background-color: aliceblue">
-        <h1>Ventas</h1>
+      <div class="Container">
+        <h1>
+          Sistema de ventas
+        </h1>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          
+        </div>
       </div>
     </section>
 
