--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clientes</title>
+    <title>Clientes Comercial Jennifer</title>
     <!-- FA pencil-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- Bootstrao-->
@@ -19,52 +19,56 @@
       <div class="Container px-3">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <h2>Datos del cliente</h2>
-            <form>
-                <div class="mb-3">
-                  <label for="nombre" class="form-label">Nombre y Apellido</label>
-                  <input type="text" class="form-control" id="nombre" placeholder="Nombre y Apellido">
+            <h3>Datos del cliente</h3>
+            <form action="/AddClient" method="post">
+                <div class="mb-2">
+                  <label for="Nombre" class="form-label">Nombres</label>
+                  <input type="text" class="form-control" id="Nombre" name="Nombre_cl" placeholder="Nombres">
                 </div>
-                <div class="mb-3">
+                <div class="mb-2">
+                  <label for="Apellido" class="form-label">Apellidos</label>
+                  <input type="text" class="form-control" id="Apellido" name="Apellido_cl" placeholder="Apellidos">
+                </div>
+                <div class="mb-2">
                     <label for="Telefono" class="form-label">Telefono</label>
-                    <input type="number" class="form-control" id="Telefono" placeholder="Telefono">
+                    <input type="number" class="form-control" id="Telefono" name="Telefono_cl" placeholder="Telefono">
                   </div>
-                  <div class="mb-3">
+                  <div class="mb-2">
                     <label for="Cedula" class="form-label">Cedula</label>
-                    <input type="text" class="form-control" id="Cedula" placeholder="Cedula">
+                    <input type="text" class="form-control" id="Cedula" name="Cedula_cl" placeholder="Cedula">
                   </div>
-                  <div class="mb-3">
-                    <label for="Residencia" class="form-label">DIRECCION</label>
+                  <div class="mb-1">
+                    <label for="Residencia" class="form-label">Dirección</label>
                   </div>
-                  <select class="form-select" aria-label="Distrito">
+                  <select id="Distrito" name="Distrito_cl" class="form-select mb-2" aria-label="Distrito">
                     <option selected>Seleccionar distrito</option>
-                    <option value="1">Distrito I</option>
-                    <option value="2">Distrito II</option>
-                    <option value="3">Distrito III</option>
-                    <option value="4">Distrito IV</option>
-                    <option value="5">Distrito V</option>
-                    <option value="6">Distrito VI</option>
-                    <option value="7">Distrito VII</option>
+                    <option value="I">I</option>
+                    <option value="II">II</option>
+                    <option value="III">III</option>
+                    <option value="IV">IV</option>
+                    <option value="V">V</option>
+                    <option value="VI">VI</option>
+                    <option value="VII">VII</option>
                   </select>
-                  <div class="mb-3 dx-2">
+                  <div class="mb-2 dx-2">
                     <label for="Residencia" class="form-label">Zona de Residencia</label>
-                    <input type="text" class="form-control" id="Residencia" placeholder="Z. Residencia">
+                    <input type="text" class="form-control" id="Residencia" name="Residencia_cl" placeholder="Zona de Residencia">
                   </div>
-                  <div class="mb-3">
+                  <div class="mb-2">
                     <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
-                    <input type="text" class="form-control" id="PuntoReferencia" placeholder="P. Referencia">
+                    <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" placeholder="Punto de Referencia">
                   </div>
-                  <div class="mb-3">
+                  <div class="mb-2">
                     <label for="Distancia" class="form-label">Distancia</label>
-                    <input type="text" class="form-control" id="Distancia" placeholder="Distancia">
+                    <input type="text" class="form-control" id="Distancia" name="Distancia_cl" placeholder="Distancia">
                   </div>
-                  <div class="mb-3">
-                    <label for="casa" class="form-label">Numero de casa</label>
-                    <input type="text" class="form-control" id="casa" placeholder="N. Casa">
+                  <div class="mb-2">
+                    <label for="Casa" class="form-label">Numero de casa</label>
+                    <input type="text" class="form-control" id="Casa" name="Casa_cl" placeholder="N. Casa">
                   </div>
                   <div class="d-grid gap-2">
-                    <Button class="btn btn-success">Guardar</Button>
-                    <Button class="btn btn-secondary">Limpiar Campos</button>
+                    <button type="submit" class="btn btn-success" title="Guardar">Guardar</button>
+                    <button class="btn btn-secondary" title="Limpiar Campos">Limpiar Campos</button>
                   </div>
                 
               </form>
@@ -75,32 +79,38 @@
                 <thead>
                   <tr>
                     <th class="centrado">Nombre completo</th>
-                    <th class="centrado">Telefono</th>
                     <th class="centrado">Cedula</th>
-                    <th class="centrado">Distrito</th>
-                    <th class="centrado">Z. Residencia</th>
-                    <th class="centrado">P. Referencia</th>
-                    <th class="centrado">Distancia</th>
-                    <th class="centrado">N. Casa</th>
+                    <th class="centrado">Telefono</th>
+                    <th class="centrado">Dirección</th>
+                    <th class="centrado">Credito Disponible</th>
                     <th class="centrado">Acciones</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td class="centrado">Norlan Gonzalez</td>
-                    <td class="centrado">87365743</td>
-                    <td class="centrado">0011909031031W</td>
-                    <td class="centrado">V</td>
-                    <td class="centrado">Villa Milagro</td>
-                    <td class="centrado">Cita con Dios</td>
-                    <td class="centrado">2c Arriba</td>
-                    <td class="centrado">M69</td>
-                    <td>
-                      <!-- Botones de acciones -->
-                      <button type="button" class="btn btn-success" title="Actualizar">Actualizar</button>
-                      <button type="button" class="btn btn-danger" title="Eliminar">Eliminar</button>
-                  </td>
-                  </tr>
+                  <% clientes[0].forEach((client) => { %>
+                    <tr>
+                      <td class="centrado"> <%= client.Nombre %> <%= client.Apellido %></td>
+                      <td class="centrado"><%= client.Cedula %></td>
+                      <td class="centrado"><%= client.Telefono %></td>
+                      <td class="centrado"><%= client.Direccion %></td>
+                      <td class="centrado"><%= client.Credito_Disponible %></td>
+                      <td>
+                        <!-- Botones de acciones -->
+                        <a href="/EditClient/<%= client.ID %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                        </svg> Actualizar</a> 
+                        <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= client.ID %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                          <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                        </svg> Eliminar</a>
+                    </td>
+                    </tr>
+
+                  <% }) %> 
+
+                  
+                  
                 </tbody>
             </table>
           </div>
@@ -108,7 +118,23 @@
       </div>
     </section>
 
-    <script src="resources/js/script.js"></script>
+    <script src="/resources/js/ScriptClient.js"></script>
+    <script src="/resources/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <% if (typeof alert != "undefined")  { %>
+      <script>
+          Swal.fire({
+              title: '<%= alertTitle %>',
+              text: '<%= alertMessage %>',
+              icon: '<%= alertIcon %>',
+              showConfirmButton: true,
+              timer: false
+          }).then(() => {
+              window.location = '/<%= ruta %>'
+          })
+      </script>
+  <% } %>
+
   </body>
 </html>
