--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Almacen Jennifer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="/resources/css/style.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -22,28 +22,28 @@
           <span class="tooltip">Buscar</span>
         </li>
         <li>
-          <a href="inicio">
+          <a href="/inicio">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Inicio</span>
           </a>
           <span class="tooltip">Inicio</span>
         </li>
         <li>
-          <a href="clientes">
+          <a href="/clientes">
             <i class="bx bx-user"></i>
             <span class="links_name">Cliente</span>
           </a>
           <span class="tooltip">Cliente</span>
         </li>
         <li>
-          <a href="vendedores">
+          <a href="/vendedores">
             <i class="bx bx-chat"></i>
             <span class="links_name">Vendedor</span>
           </a>
           <span class="tooltip">Vendedor</span>
         </li>
         <li>
-          <a href="productos">
+          <a href="/productos">
             <i class="bx bx-purchase-tag-alt"></i>
             <span class="links_name">Producto</span>
           </a>
