--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -15,6 +15,7 @@
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
+    
     <section class="home-section">
       <div class="Container px-3">
         <div class="row">
@@ -23,24 +24,27 @@
             <form action="/AddClient" method="post">
                 <div class="mb-2">
                   <label for="Nombre" class="form-label">Nombres</label>
-                  <input type="text" class="form-control" id="Nombre" name="Nombre_cl" placeholder="Nombres">
+                  <input type="text" class="form-control" id="Nombre" name="Nombre_cl" placeholder="Nombres" required>
                 </div>
+
+                
+
                 <div class="mb-2">
                   <label for="Apellido" class="form-label">Apellidos</label>
-                  <input type="text" class="form-control" id="Apellido" name="Apellido_cl" placeholder="Apellidos">
+                  <input type="text" class="form-control" id="Apellido" name="Apellido_cl" placeholder="Apellidos" required>
                 </div>
                 <div class="mb-2">
                     <label for="Telefono" class="form-label">Telefono</label>
-                    <input type="number" class="form-control" id="Telefono" name="Telefono_cl" placeholder="Telefono">
+                    <input type="number" class="form-control" id="Telefono" name="Telefono_cl" placeholder="Telefono" required>
                   </div>
                   <div class="mb-2">
                     <label for="Cedula" class="form-label">Cedula</label>
-                    <input type="text" class="form-control" id="Cedula" name="Cedula_cl" placeholder="Cedula">
+                    <input type="text" class="form-control" id="Cedula" name="Cedula_cl" placeholder="Cedula" required>
                   </div>
                   <div class="mb-1">
                     <label for="Residencia" class="form-label">Dirección</label>
                   </div>
-                  <select id="Distrito" name="Distrito_cl" class="form-select mb-2" aria-label="Distrito">
+                  <select id="Distrito" name="Distrito_cl" class="form-select mb-2" aria-label="Distrito" required>
                     <option selected>Seleccionar distrito</option>
                     <option value="I">I</option>
                     <option value="II">II</option>
@@ -52,11 +56,11 @@
                   </select>
                   <div class="mb-2 dx-2">
                     <label for="Residencia" class="form-label">Zona de Residencia</label>
-                    <input type="text" class="form-control" id="Residencia" name="Residencia_cl" placeholder="Zona de Residencia">
+                    <input type="text" class="form-control" id="Residencia" name="Residencia_cl" placeholder="Zona de Residencia" required>
                   </div>
                   <div class="mb-2">
                     <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
-                    <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" placeholder="Punto de Referencia">
+                    <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" placeholder="Punto de Referencia" required>
                   </div>
                   <div class="mb-2">
                     <label for="Distancia" class="form-label">Distancia</label>
@@ -64,7 +68,7 @@
                   </div>
                   <div class="mb-2">
                     <label for="Casa" class="form-label">Numero de casa</label>
-                    <input type="text" class="form-control" id="Casa" name="Casa_cl" placeholder="N. Casa">
+                    <input type="text" class="form-control" id="Casa" name="Casa_cl" placeholder="N. Casa" required>
                   </div>
                   <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-success" title="Guardar">Guardar</button>
@@ -99,12 +103,12 @@
                         <a href="/EditClient/<%= client.ID %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                           <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                           <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                        </svg> Actualizar</a> 
+                        </svg></a> 
                         <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= client.ID %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                           <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                           <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                        </svg> Eliminar</a>
-                    </td>
+                        </svg></a>
+                      </td>
                     </tr>
 
                   <% }) %> 
