--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clientes</title>
+    <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"crossorigin="anonymous"/>
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"rel="stylesheet"/>
-    <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="/resources/css/style.css" />
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
@@ -14,124 +14,127 @@
       <div class="Container px-3">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <h2>Inserccion de productos</h2>
+            <h3><b>Registro de productos</b></h3><br>
             <div class="mb-3">
-              <label for="text" class="form-label">Seleccionar categoriaa la cual se le va añadir el productos</label>
+              <label for="text" class="form-label"><b>Seleccione la categoria del producto a añadir</b></label>
             </div>
-            <select class="form-select" aria-label="Seleccione una categoria">
-              <option selected>Seleccione una categoria</option>
+
+            <select class="form-select"  aria-label="Seleccione una categoria" id="categoria"  required>
+              <option value="sipi" >Seleccione una categoria</option>
               <option value="1">Calzado</option>
               <option value="2">Prendas de Vestir</option>
               <option value="3">Cosmeticos</option>
               <option value="4">Electrodomestico</option>
               <option value="5">Productos Plasticos</option>
             </select>
-            <form class="row g-3 py-3"> 
+
+            <form action="/AddProduct" method="post" class="row g-3 py-3"> 
               <div class="col-md-6">
-                <label for="Marca" class="form-label">Marca</label>
-                <input type="text" class="form-control" id="Marca">
+                <label for="Marca" id="Marcalb" class="form-label">Marca</label>
+                <input type="text" class="form-control" id="Marca" name="Marca" required>
+                <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden>
               </div>
 
               <div class="col-md-6">
-                <label for="EXistencia" class="form-label">Existencia del producto</label>
-                <input type="number" class="form-control" id="Existencia">
+                <label for="Existencia" class="form-label">Existencia del producto</label>
+                <input type="number" class="form-control" id="Existencia" name="Existencia">
               </div>
 
               <div class="col-md-6">
                 <label for="Precio" class="form-label">Precio del Producto</label>
-                <input type="number" class="form-control" id="Precio">
+                <input type="number" class="form-control" id="Precio" name="Precio" required>
               </div>
 
               <div class="col-md-6">
                 <label for="Color" class="form-label">Color del producto</label>
-                <input type="text" class="form-control" id="Color">
+                <input type="text" class="form-control" id="Color" name="Color" required>
               </div>  
 
                 <div class="col-md-6">
                   <label for="Tipo" class="form-label">Tipo de producto</label>
-                  <input type="text" class="form-control" id="Tipo">
+                  <input type="text" class="form-control" id="Tipo" name="Tipo" required>
                 </div>
 
                 <div class="col-md-6">
                   <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
-                  <input type="date" class="form-control" id="FechaIngreso">
+                  <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required>
                 </div>
 
                 <div class="col-md-6">
-                  <label for="Talla" class="form-label">Talla del producto</label>
-                  <input type="text" class="form-control" id="Talla">
+                  <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
+                  <input type="text" class="form-control" id="Talla" name="Talla">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="Modelo" class="form-label">Modelo del producto</label>
-                  <input type="text" class="form-control" id="Modelo">
+                  <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
+                  <input type="text" class="form-control" id="Modelo" name="Modelo">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="Clasificacion" class="form-label">Clasificacion</label>
-                  <input type="text" class="form-control" id="Clasificacion">
+                  <label for="Clasificacion" id="Clasificacionlb" class="form-label">Clasificacion</label>
+                  <input type="text" class="form-control" id="Clasificacion" name="Clasificacion">
 
-                  <label for="Dimesiones" class="form-label">Dimesiones</label>
-                  <input type="text" class="form-control" id="Dimesiones">
+                  <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones</label>
+                  <input type="text" class="form-control" id="Dimensiones" name="Dimensiones">
 
-                  <label for="UnidadMedida" class="form-label">UNidad de Medida</label>
-                  <input type="text" class="form-control" id="UnidadMedida">
+                  <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
+                  <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida">
                 </div>
 
                 <div class="d-grid gap-2">
-                  <Button class="btn btn-success">Guardar</Button>
+                  <Button type="submit" class="btn btn-success">Guardar</Button>
                   <Button class="btn btn-secondary">Limpiar Campos</button>
                 </div>
-
             </form>
          </div>
+
            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 px-4 py-10">
-            <h2>----------------</h2>
-             <div class="card" style="width: 18rem;">
-                <img src="resources/images/Calzado.jpg" class="card-img-top" alt="...">
+            <!-- <h2>----------------</h2> -->
+             <div class="card mt-3 mb-3" style="width: 15rem;">
+                <img src="/resources/images/2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Categoria Calzado</h5>
-                  <p class="card-text"></p>
-                 <a href="#" class="btn btn-primary">Go somewhere</a>
+<!--                   <h5 class="card-title">Categoria Calzado</h5>
+                  <p class="card-text"></p> -->
+                 <a href="/ShowProducts/Calzado" class="btn btn-primary">Ver Productos</a>
                 </div>
              </div>
 
-             <div class="card" style="width: 18rem;">
-              <img src="resources/images/Electrodomesticos.jpg" class="card-img-top" alt="...">
+             <div class="card mb-3" style="width: 15rem;">
+              <img src="/resources/images/3.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Categoria Electromesticos</h5>
-                <p class="card-text"></p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
+<!--                 <h5 class="card-title">Categoria Electromesticos</h5>
+                <p class="card-text"></p> -->
+               <a href="/ShowProducts/Electrodomesticos" class="btn btn-primary">Ver Productos</a>
               </div>
            </div>
 
-           <div class="card" style="width: 18rem;">
-            <img src="resources/images/ProductosPlaticos.jpg" class="card-img-top" alt="...">
+           <div class="card mb-3" style="width: 15rem;">
+            <img src="/resources/images/6.png" class="card-img-top" alt="...">
              <div class="card-body">
-              <h5 class="card-title">Categoria Productos Plasticos</h5>
-              <p class="card-text"></p>
-             <a href="#" class="btn btn-primary">Go somewhere</a>
+<!--               <h5 class="card-title">Categoria Productos Plasticos</h5>
+              <p class="card-text"></p> -->
+             <a href="/ShowProducts/ProdPlas" class="btn btn-primary">Ver Productos</a>
              </div>
             </div>
 
           </div>
             <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 py-10">
-              <h2>----------------</h2>
-              <div class="card" style="width: 18rem;">
-                 <img src="resources/images/Cosmeticos.jpg" class="card-img-top" alt="...">
+<!--               <h2>----------------</h2> -->
+              <div class="card mt-3 mb-3" style="width: 15rem;">
+                 <img src="/resources/images/4.png" class="card-img-top" alt="...">
                  <div class="card-body">
-                   <h5 class="card-title">Categoria Prendas de Vestir</h5>
-                   <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+<!--                    <h5 class="card-title">Categoria Prendas de Vestir</h5>
+                   <p class="card-text"></p> -->
+                  <a href="/ShowProducts/Cosmeticos" class="btn btn-primary">Ver Productos</a>
                  </div>
               </div>
 
-              <div class="card" style="width: 18rem;">
-                <img src="resources/images/PrendasVesitr.jpg" class="card-img-top" alt="...">
+              <div class="card mb-3" style="width: 15rem;">
+                <img src="/resources/images/5.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Categoria Prendas de Vestir</h5>
-                  <p class="card-text"></p>
-                 <a href="#" class="btn btn-primary">Go somewhere</a>
+<!--                   <h5 class="card-title">Categoria Prendas de Vestir</h5>
+                  <p class="card-text"></p> -->
+                 <a href="/ShowProducts/Prendas" class="btn btn-primary">Ver Productos</a>
                 </div>
              </div>
 
@@ -141,7 +144,26 @@
         </div>
       </div>
     </section>
+    </div>
 
-    <script src="resources/js/script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/resources/js/script.js"></script>
+    <script src="/resources/js/ScriptProducts.js"></script>
+
+    <% if (typeof alert != "undefined")  { %>
+      <script>
+          Swal.fire({
+              title: '<%= alertTitle %>',
+              text: '<%= alertMessage %>',
+              icon: '<%= alertIcon %>',
+              showConfirmButton: true,
+              timer: false
+          }).then(() => {
+              window.location = '/<%= ruta %>'
+          })
+      </script>
+  <% } %>
+
   </body>
 </html>
