--- a/public/css/style.css
+++ b/public/css/style.css
@@ -548,4 +548,21 @@ body{
 .btn-margin {
   margin-right: 10px; /* Ajusta según la separación deseada */
 }
+/*color del chunche de arriba*/
+.contenedorventas{
+  color: white;
+  background-color: #11101D;
+}
 
+/*Panel de abonos*/
+.panel-flotante {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000; /* Asegura que esté encima de otros elementos */
+}
