--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -79,6 +79,15 @@
           </div>
           <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
             <h2>Listado de clientes</h2>
+            <nav class="navbar bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand">Buscar cliente</a>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </nav>
             <table class="table primary">
                 <thead>
                   <tr>
