--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -20,11 +20,12 @@
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
       <div class="Container">
-        <h1>
-          Sistema de ventas
-        </h1>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-         
+          <div class="Container px-3 py-1 contenedorventas">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <h2 class="centrado">Registro de ventas al contado</h2>
+            </div>
+          </div>
         </div>
       </div>
     </section>
