--- a/views/abonos.ejs
+++ b/views/abonos.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clientes</title>
+    <title>Abonos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,11 +19,142 @@
   <body>
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
-      <div class="Container" style="background-color: aliceblue">
-        <h1>abonos</h1>
+      <div class="Container">
+        <div class="Container px-3 py-1 contenedorventas">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <h2 class="centrado">Por favor busque la venta a la cual</h2>
+            <h2 class="centrado"> desea hacer el abono</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="px-3 py-2">
+              <h4 style="display: flex; justify-content: space-between;">Listado de ventas al crédito
+                <button type="button" class="btn btn-success" title="Abonar" onclick="mostrarPanelHistorialAbonos()"><i class="fa-solid fa-list"></i>Listar historial de abonos</button>
+              </h4>
+            </div>
+            <div id="panelHistorialAbonos" class="panel-flotante" style="display: none;">
+              <div class="panel-content">
+                <h4>Historial de abonos</h4>
+                <nav class="navbar bg-body-tertiary">
+                  <div class="container-fluid">
+                    <a class="navbar-brand px-3">Buscar nombre del cliente</a>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                  </div>
+                </nav>
+                <div style="max-height: 300px; overflow-y: auto;">
+                  <table class="table primary">
+                    <thead>
+                      <tr>
+                        <th class="centrado">Nombre del cliente</th>
+                        <th class="centrado">Nombre del vendedor</th>
+                        <th class="centrado">Fecha del abono realizado</th>
+                        <th class="centrado">Monto abonado</th>
+                        <th class="centrado">Saldo restante</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="centrado">Cliente A</td>
+                        <td class="centrado">Vendedor X</td>
+                        <td class="centrado">2024-04-20</td>
+                        <td class="centrado">$100.00</td>
+                        <td class="centrado">$150.00</td>
+                      </tr>
+                      <tr>
+                        <td class="centrado">Cliente B</td>
+                        <td class="centrado">Vendedor Y</td>
+                        <td class="centrado">2024-04-15</td>
+                        <td class="centrado">$200.00</td>
+                        <td class="centrado">$300.00</td>
+                      </tr>
+                      <tr>
+                        <td class="centrado">Cliente C</td>
+                        <td class="centrado">Vendedor Z</td>
+                        <td class="centrado">2024-04-10</td>
+                        <td class="centrado">$50.00</td>
+                        <td class="centrado">$750.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <button type="button" class="btn btn-danger" onclick="cerrarPanelHistorialAbonos()">Cerrar</button>
+              </div>
+            </div>
+            <nav class="navbar bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand px-3">Buscar una venta al credito</a>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </nav>
+            <table class="table primary px-3">
+              <thead>
+                <tr>
+                  <th class="centrado">Nombre del cliente</th>
+                  <th class="centrado">Nombrede vendedor</th>
+                  <th class="centrado">Fecha de venta</th>
+                  <th class="centrado">Plazo de compra</th>
+                  <th class="centrado">Frecuencia de abono</th>
+                  <th class="centrado">Cantidad total</th>
+                  <th class="centrado">Saldo restante</th>
+                  <th class="centrado">Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="centrado">Cliente A</td>
+                  <td class="centrado">Vendedor X</td>
+                  <td class="centrado">2024-04-20</td>
+                  <td class="centrado">30 días</td>
+                  <td class="centrado">Semanal</td>
+                  <td class="centrado">$500.00</td>
+                  <td class="centrado">$250.00</td>
+                  <td class="centrado">
+                    <button type="button" class="btn btn-success" title="Abonar" onclick= "mostrarPanelAbono()"><i class="fa-solid fa-money-check-dollar"></i></button>
+                    <button type="button" class="btn btn-danger px-3" title="Eliminar"><i class="fa-solid fa-trash"></i></button>
+                    
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div id="panelAbono" class="panel-flotante" style="display: none">
+              <div class="panel-content">
+                <h4>Realizar abono</h4>
+                <form class="row g-3 py-3">
+                  <div class="col-md-6">
+                    <label for="Nombre_cliente" class="form-label">Nombre del Cliente</label>
+                    <input type="text" class="form-control" id="Nombre_cliente">
+
+                    <label for="Nombre_vendedor" class="form-label">Nombre del Vendedor</label>
+                    <input type="text" class="form-control" id="Nombre_vendedor">
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="Fecha_Abono" class="form-label">Fecha del abono</label>
+                    <input type="date" class="form-control" id="Fecha_Abono">
+
+                    <label for="Monto_Abono" class="form-label">Monto a Abonar</label>
+                    <input type="number" class="form-control" id="Monto_Abono">
+                  </div>
+                  
+                  <button type="submit" class="btn btn-success">Guardar</button>
+                  <button type="button" class="btn btn-danger" onclick="cerrarPanelAbono()">Cancelar</button>
+                </form>
+              </div>
+            </div>                       
+          </div>
+        </div>
+        
       </div>
     </section>
-
+    
     <script src="resources/js/script.js"></script>
+    <script src="/resources/js/ScriptAbonos.js"></script>
   </body>
 </html>
