--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -20,7 +20,7 @@
             </div>
 
             <select class="form-select"  aria-label="Seleccione una categoria" id="categoria"  required>
-              <option value="sipi" >Seleccione una categoria</option>
+              <option value="0" >Seleccione una categoria</option>
               <option value="1">Calzado</option>
               <option value="2">Prendas de Vestir</option>
               <option value="3">Cosmeticos</option>
@@ -83,7 +83,7 @@
 
                 <div class="d-grid gap-2">
                   <Button type="submit" class="btn btn-success">Guardar</Button>
-                  <Button class="btn btn-secondary">Limpiar Campos</button>
+                  <Button class="btn btn-secondary" onclick="">Limpiar Campos</button>
                 </div>
             </form>
          </div>
@@ -113,7 +113,7 @@
              <div class="card-body">
 <!--               <h5 class="card-title">Categoria Productos Plasticos</h5>
               <p class="card-text"></p> -->
-             <a href="/ShowProducts/ProdPlas" class="btn btn-primary">Ver Productos</a>
+             <a href="/ShowProducts/Productos_Plasticos" class="btn btn-primary">Ver Productos</a>
              </div>
             </div>
 
@@ -134,7 +134,7 @@
                 <div class="card-body">
 <!--                   <h5 class="card-title">Categoria Prendas de Vestir</h5>
                   <p class="card-text"></p> -->
-                 <a href="/ShowProducts/Prendas" class="btn btn-primary">Ver Productos</a>
+                 <a href="/ShowProducts/Prendas_Vestir" class="btn btn-primary">Ver Productos</a>
                 </div>
              </div>
 
