--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -12,7 +12,50 @@
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
       <div class="Container" style ="background-color: aliceblue;">
-        <h1> tutorial de bootstrap</h1>
+        <div class="Container row mx-5 col-xl-11 col-lg-8">
+
+          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
+            <img src="/resources/images/productoCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El Producto más vendido</h5>
+              <a href="#" class="btn btn-primary">Mostrar Productos</a>
+            </div>
+          </div>
+
+          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
+            <img src="/resources/images/vendedorCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El Vendedor con más ventas</h5>
+              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
+            </div>
+          </div>
+
+          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
+            <img src="/resources/images/clienteCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El Cliente con más ventas</h5>
+              <a href="#" class="btn btn-primary">Mostrar Cliente</a>
+            </div>
+          </div>
+
+          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
+            <img src="/resources/images/worstcustomer.png" class="card-img-top mx-1 my-3" style="height: 10rem;" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El Cliente con menos ventas</h5>
+              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
+            </div>
+          </div>
+
+          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
+            <img src="/resources/images/worstsalesman.png" class="card-img-top mx-1 my-3" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El Vendedor con menos ventas</h5>
+              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
+            </div>
+          </div>
+
+
+        </div>
       </div>
     </section>
 
