Septima commit Kenneth

--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -234,7 +234,7 @@
 
                             <td>
                                 <!-- Botones de acciones -->
-                                <a href="/EditProduct/<%= Categoria %>/Producto/<%= product.Id_Producto %>/Cat/<%= product.IdCat %>')" class="btn btn-success mb-1" title="Actualizar"><svg
+                                <a href="/EditProduct/<%= Categoria %>/Producto/<%= product.Id_Producto %>/Cat/<%= product.IdCat %>" class="btn btn-success mb-1" title="Actualizar"><svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="16"
                                     height="16"
