--- a/views/editProducts.ejs
+++ b/views/editProducts.ejs
@@ -20,184 +20,96 @@
               <label for="text" class="form-label"><b>Seleccione la categoria del producto a añadir</b></label>
             </div>
 
-            <select
-              class="form-select"
-              aria-label="Seleccione una categoria"
-              id="categoria"
-              required
-            >
+            <select class="form-select" aria-label="Seleccione una categoria" id="categoria" required>
               <option value="0">Seleccione una categoria</option>
-
-              <% if ( Categoria == 'Calzado') { %>
+              <% if ( Producto.Nombre_Categoria == 'Calzado') { %>
               <option value="1" selected>Calzado</option>
               <% } else { %>
               <option value="1">Calzado</option>
-              <% } %> <% if ( Categoria == 'Prendas_Vestir' || Categoria == 'Prendas de Vestir') { Categoria= 'Prendas de Vestir' %>
+              <% } %> <% if ( Producto.Nombre_Categoria == 'Prendas_Vestir' || Producto.Nombre_Categoria == 'Prendas de Vestir') { Categoria= 'Prendas de Vestir' %>
               <option value="2" selected>Prendas de Vestir</option>
               <% } else { %>
               <option value="2">Prendas de Vestir</option>
-              <% } %> <% if ( Categoria == 'Cosmeticos') { %>
+              <% } %> <% if ( Producto.Nombre_Categoria == 'Cosmeticos') { %>
               <option value="3" selected>Cosmeticos</option>
               <% } else { %>
               <option value="3">Cosmeticos</option>
-              <% } %> <% if ( Categoria == 'Electrodomesticos') { %>
+              <% } %> <% if ( Producto.Nombre_Categoria == 'Electrodomesticos') { %>
               <option value="4" selected>Electrodomesticos</option>
               <% } else { %>
               <option value="4">Electrodomesticos</option>
-              <% } %> <% if ( Categoria == 'Productos_Plasticos' || Categoria == 'Productos Plasticos') { Categoria = 'Productos Plasticos' %>
+              <% } %> <% if ( Producto.Nombre_Categoria == 'Productos_Plasticos' || Producto.Nombre_Categoria == 'Productos Plasticos') { Categoria = 'Productos Plasticos' %>
               <option value="5" selected>Productos Plasticos</option>
               <% } else { %>
               <option value="5">Productos Plasticos</option>
               <% } %>
             </select>
 
-            <form action="/AddProduct" method="post" class="row g-3 py-3">
+            <form action="/UpdateProduct" method="post" class="row g-3 py-3">
               <div class="col-md-6">
                 <label for="Marca" id="Marcalb" class="form-label">Marca</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Marca"
-                  name="Marca"
-                  required
-                />
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Categoria_Prod"
-                  name="Categoria_Prod"
-                  hidden
-                />
+                <input type="text" class="form-control" id="Marca" name="Marca" required value="<%= Producto.Marca %>"/>
+                <input type="text" class="form-control" id="Id_Prod" name="Id_Prod"  value="<%= Producto.Id_Producto %>" hidden/>
+                <input type="text" class="form-control" id="Id_Cat" name="Id_Cat"  value="<%= Producto.Id_Categoria %>" hidden/>
+                <input type="text" class="form-control" id="p_cat" name="p_cat"  value="<%= p_cat %>" hidden/>
+                <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod"  value="<%= Producto.Nombre_Categoria %>" hidden/>
               </div>
 
               <div class="col-md-6">
-                <label for="Existencia" class="form-label"
-                  >Existencia del producto</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="Existencia"
-                  name="Existencia"
-                />
+                <label for="Existencia" class="form-label">Existencia del producto</label>
+                <input type="number" class="form-control" id="Existencia" name="Existencia" value="<%= Producto.Existencia %>"/>
               </div>
 
               <div class="col-md-6">
-                <label for="Precio" class="form-label"
-                  >Precio del Producto</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="Precio"
-                  name="Precio"
-                  required
-                />
+                <label for="Precio" class="form-label">Precio del Producto</label>
+                <input type="number" class="form-control" id="Precio" name="Precio" required value="<%= Producto.Precio %>"/>
               </div>
 
               <div class="col-md-6">
                 <label for="Color" class="form-label">Color del producto</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Color"
-                  name="Color"
-                  required
-                />
+                <input type="text" class="form-control" id="Color" name="Color" required value="<%= Producto.Color %>"/>
               </div>
 
               <div class="col-md-6">
                 <label for="Tipo" class="form-label">Tipo de producto</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Tipo"
-                  name="Tipo"
-                  required
-                />
+                <input type="text" class="form-control" id="Tipo" name="Tipo" required value="<%= Producto.Tipo %>"/>
               </div>
 
               <div class="col-md-6">
-                <label for="FechaIngreso" class="form-label"
-                  >Fecha de Ingreso</label
-                >
-                <input
-                  type="date"
-                  class="form-control"
-                  id="FechaIngreso"
-                  name="Fecha"
-                  required
-                />
+                <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
+                <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required value="<%= Producto.Fecha_Ingreso %>"/>
+              </div>
+              
+              <div class="col-md-6">
+                <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
+                <input type="text" class="form-control" id="Talla" name="Talla" value="<%= Producto.Talla %>"/>
+              </div>
+              
+              <div class="col-md-6">
+                <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
+                <input type="text" class="form-control" id="Modelo" name="Modelo" value="<%= Producto.Modelo %>"/>
               </div>
 
               <div class="col-md-6">
-                <label for="Talla" id="Tallalb" class="form-label"
-                  >Talla del producto</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Talla"
-                  name="Talla"
-                />
-              </div>
+                <label for="Clasificacion" id="Clasificacionlb" class="form-label">Clasificacion</label>
+                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" value="<%= Producto.Clasificacion %>"/>
 
-              <div class="col-md-6">
-                <label for="Modelo" id="Modelolb" class="form-label"
-                  >Modelo del producto</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Modelo"
-                  name="Modelo"
-                />
-              </div>
+                <label for="Dimensiones" id="Dimensioneslb" class="form-label" >Dimensiones</label>
+                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" value="<%= Producto.Dimensiones %>"/>
 
-              <div class="col-md-6">
-                <label
-                  for="Clasificacion"
-                  id="Clasificacionlb"
-                  class="form-label"
-                  >Clasificacion</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Clasificacion"
-                  name="Clasificacion"
-                />
-
-                <label for="Dimensiones" id="Dimensioneslb" class="form-label"
-                  >Dimensiones</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Dimensiones"
-                  name="Dimensiones"
-                />
-
-                <label for="UnidadMedida" id="UnidadMedidalb" class="form-label"
-                  >Unidad de Medida</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="UnidadMedida"
-                  name="Unidad_Medida"
-                />
+                <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
+                <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" value="<%= Producto.Unidad_de_Medida %>"/>
               </div>
 
               <div class="d-grid gap-2">
-                <Button type="submit" class="btn btn-success">Guardar</Button>
+                <Button type="submit" class="btn btn-success">Editar</Button>
                 <Button class="btn btn-secondary">Limpiar Campos</Button>
               </div>
             </form>
           </div>
 
           <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-            <h2>Listado de <%= Categoria %></h2>
+            <h2>Listado de <%= Producto.Nombre_Categoria %></h2>
             <table class="table primary">
               <thead>
                 <tr>
@@ -205,63 +117,17 @@
                   <th class="centrado">Precio</th>
                   <th class="centrado">Stock</th>
                   <th class="centrado">Fecha Ingreso</th>
-                  <th class="centrado">Acciones</th>
                 </tr>
               </thead>
+                <tbody>
+                  <tr>
+                    <td class="centrado"><%= Producto.Productos %></td>
+                    <td class="centrado"><%= Producto.Precio %></td>
+                    <td class="centrado"><%= Producto.Existencia %></td>
+                    <td class="centrado"><%= Producto.Fecha_Ingreso %></td>
 
-              <% if ( Producto != null) { %> 
-                    <% Producto[0].forEach((product) => { %>
-                        <tbody>
-                            <tr>
-                            <td class="centrado"><%= product.Productos %></td>
-                            <td class="centrado"><%= product.Precio %></td>
-                            <td class="centrado"><%= product.Existencia %></td>
-                            <td class="centrado"><%= product.Fecha_Ingreso %></td>
-
-                            <td>
-                                <!-- Botones de acciones -->
-                                <a href="#" class="btn btn-success mb-1" title="Actualizar"
-                                ><svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="16"
-                                    height="16"
-                                    fill="currentColor"
-                                    class="bi bi-pencil-square"
-                                    viewBox="0 0 16 16"
-                                >
-                                    <path
-                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
-                                    />
-                                    <path
-                                    fill-rule="evenodd"
-                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
-                                    /></svg
-                                ></a>
-                                <a
-                                href="#"
-                                class="btn btn-danger"
-                                title="Eliminar"
-                                onclick="confirmDelete('<%= product.Categoria %>','<%= product.Id_Producto %>','<%= product.IdCat %>')"
-                                ><svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="16"
-                                    height="16"
-                                    fill="currentColor"
-                                    class="bi bi-trash"
-                                    viewBox="0 0 16 16"
-                                >
-                                    <path
-                                    d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-                                    />
-                                    <path
-                                    d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-                                    /></svg
-                                ></a>
-                            </td>
-                            </tr>
-                        </tbody>
-                    <% }) %> 
-              <% } %>
+                  </tr>
+                </tbody>
             </table>
           </div>
         </div>
