First commit v1.5 Kenneth

--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vendedores</title>
+    <title>Vendedores Comercial Jennifer</title>
     <!-- FA pencil-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- Bootstrao-->
@@ -19,7 +19,11 @@
       <div class="Container px-3">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <h2>Datos del Vendedor</h2>
+
+            <div class="mt-3 mb-3">
+              <h2 class="text-secondary "><b>Datos del Vendedor</b></h2>
+            </div>
+
             <form action="/AddVendedor" method="post">
                 <div class="mb-2">
                   <label for="nombre" class="form-label">Nombres</label>
@@ -74,7 +78,11 @@
               </form>
           </div>
           <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-            <h2>Listado de Vendedores</h2>
+            <div class="mt-3 mb-3">
+              <h2><b>Listado de Vendedores</b></h2>
+            </div>
+            
+
             <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
                 <a class="navbar-brand">Buscar vendedor</a>
