--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clientes</title>
+    <title>Ventas Contado Comercial Jennifer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,20 +18,21 @@
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
+
     <section class="home-section">
       <div class="Container">
         
-        <div class="Container px-3 py-1 contenedorventas">
+<!--         <div class="Container px-3 py-1 contenedorventas">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <h2 class="centrado">Registro e historial de</h2>
             <h2 class="centrado">ventas al contado</h2>
           </div>
-        </div>
+        </div> -->
         
         <div class="Container">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <div class="row">
-              <div class="accordion accordion-flush py-3" id="accordionFlushExample">
+              <div class="accordion accordion-flush py-0" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed contenedorventas" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" >
@@ -350,9 +351,9 @@
             </div>
 
 
-            <div class="py-3">
+            <div class="py-3 px-3">
               <h4 style="display: flex; justify-content: space-between">Listado de ventas al contado</h4>
-            </div>
+            </div> 
           
             <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
@@ -363,6 +364,8 @@
                     type="search"
                     placeholder="Buscar..."
                     aria-label="Search"
+                    id="inputSearch"
+                    onchange="SearchVenta()"
                   />
                   <button class="btn btn-outline-success" type="submit">
                     Buscar
@@ -370,48 +373,52 @@
                 </form>
               </div>
             </nav>
-            <table class="table primary px-3">
-              <thead>
-                <tr>
-                  <th class="centrado">Nombre del cliente</th>
-                  <th class="centrado">Nombrede vendedor</th>
-                  <th class="centrado">Fecha de venta</th>
-                  <th class="centrado">Cantidad total</th>
-                  <th class="centrado">Acciones</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="centrado">Cliente A</td>
-                  <td class="centrado">Vendedor X</td>
-                  <td class="centrado">2024-04-20</td>
-                  <td class="centrado">$250.00</td>
-                  <td class="centrado">
-                    <button
-                      type="button"
-                      class="btn btn-success"
-                      title="Informacion de la venta"
-                      onclick=""
-                    >
-                      <i class="fa-solid fa-money-check-dollar"></i>
-                    </button>
-                    <button
-                      type="button"
-                      class="btn btn-danger px-3"
-                      title="Eliminar"
-                    >
-                      <i class="fa-solid fa-trash"></i>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+              <table class="table primary px-3">
+                <thead>
+                  <tr>
+                    <th class="centrado">Número de Venta</th>
+                    <th class="centrado">Cliente</th>
+                    <th class="centrado">Vendedor</th>
+                    <th class="centrado">Fecha de la venta</th>
+                    <th class="centrado">Total</th>
+                    <th class="centrado">Acciones</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% ventas.forEach((Venta) => { %>
+                    <tr>
+                      <td class="centrado"><%= Venta.Numero_Venta %></td>
+                      <td class="centrado"><%= Venta.Cliente %></td>
+                      <td class="centrado"><%= Venta.Vendedor %></td>
+                      <td class="centrado"><%= Venta.Fecha_Venta %></td>
+                      <td class="centrado"><%= Venta.Total_Venta %></td>
+                      <td class="centrado">
+                        <button
+                          type="button"
+                          class="btn btn-success"
+                          title="Informacion de la venta"
+                          onclick="mostrarPanelAbono()"
+                        >
+                          <i class="fa-solid fa-money-check-dollar"></i>
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-danger px-3"
+                          title="Eliminar"
+                        >
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  <% }) %> 
+                </tbody>
+              </table>
           </div>
         </div>
       </div>
     </section>
 
-    <script src="resources/js/script.js"></script>
-    <script src="resources/js/ScriptVentaContado.js"></script>
+    <script src="/resources/js/script.js"></script>
+    <script src="/resources/js/ScriptVentaContado.js"></script>
   </body>
 </html>
