--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -6,12 +6,12 @@
     <title>Clientes Comercial Jennifer</title>
     <!-- FA pencil-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <!-- Bootstrao-->
+    <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"crossorigin="anonymous"/>
     <!-- Boxicons -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"rel="stylesheet"/>
     <!--Estilo CSS-->
-    <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="/resources/css/style.css" />
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
@@ -20,14 +20,14 @@
       <div class="Container px-3">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <h3>Datos del cliente</h3>
+            <h3>Registrar Cliente</h3>
+
             <form action="/AddClient" method="post">
                 <div class="mb-2">
                   <label for="Nombre" class="form-label">Nombres</label>
+                  <input type="text" class="form-control" id="Tipo" name="Tipo_cl" placeholder="Tipo" value="Cliente" hidden>
                   <input type="text" class="form-control" id="Nombre" name="Nombre_cl" placeholder="Nombres" required>
                 </div>
-
-                
 
                 <div class="mb-2">
                   <label for="Apellido" class="form-label">Apellidos</label>
@@ -82,8 +82,8 @@
             <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
                 <a class="navbar-brand">Buscar cliente</a>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                <form action="/SearchCliente" method="post" class="d-flex" role="search">
+                  <input id="search" name="nombreSearch" class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search" onkeyup="SearchCliente()">
                   <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
               </div>
@@ -99,32 +99,33 @@
                     <th class="centrado">Acciones</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <% clientes[0].forEach((client) => { %>
-                    <tr>
-                      <td class="centrado"> <%= client.Nombre %> <%= client.Apellido %></td>
-                      <td class="centrado"><%= client.Cedula %></td>
-                      <td class="centrado"><%= client.Telefono %></td>
-                      <td class="centrado"><%= client.Direccion %></td>
-                      <td class="centrado"><%= client.Credito_Disponible %></td>
-                      <td>
-                        <!-- Botones de acciones -->
-                        <a href="/EditClient/<%= client.ID %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                        </svg></a> 
-                        <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= client.ID %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                          <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                        </svg></a>
-                      </td>
-                    </tr>
-
-                  <% }) %> 
-
-                  
-                  
-                </tbody>
+                  <tbody>
+                    <% clientes.forEach((client) => { %>
+                      <tr>
+                        <td class="centrado"> <%= client.Nombre %></td>
+                        <td class="centrado"><%= client.Cedula %></td>
+                        <td class="centrado"><%= client.Telefono %></td>
+                        <td class="centrado"><%= client.Dirección %></td>
+                        <td class="centrado">C$ <%= client.Credito_Disponible %></td>
+                        <td>
+                          <!-- Botones de acciones -->
+                          <a href="/EditClient/<%= client.Id_Cliente %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                          </svg></a> 
+                          <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= client.ID %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                          </svg></a>
+                        </td>
+                      </tr>
+  
+                    <% }) %> 
+  
+                    
+                    
+                  </tbody>
+                
             </table>
           </div>
         </div>
@@ -135,6 +136,7 @@
     <script src="/resources/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <% if (typeof alert != "undefined")  { %>
       <script>
           Swal.fire({
